--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,3 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -10,10 +6,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  &_title {
+    @apply m-0 text-7xl bg-blue-500 p-5;
+    font-weight: 700;
+  }
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  // margin: 0;
+  // line-height: 1.15;
+  // font-size: 4rem;
+  @apply m-0 text-7xl bg-red-800 p-5;
+  font-weight: 700;
 }
